--- a/src/css/app.css
+++ b/src/css/app.css
@@ -18,7 +18,7 @@
 }
 
 #sidebar {
-	padding-left: 30px; #more padding between #main and #sidebar
+	padding-left: 30px; /* more padding between #main and #sidebar */
 }
 
 #main .row {
@@ -370,3 +370,12 @@ a.button.secondary.active {
 a.disabled {
 	color: lightgray;
 }
+
+#analyze-dropdown a.button {
+    display: block;
+}
+
+#analyze-dropdown a.button:not(:first-child) {
+    margin-top: 4px;
+}
+
