Entities view: Better visual separation of different entity classes by margin

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -400,6 +400,11 @@ a.disabled {
 
 }
 
+#entities h2 {
+  font-size: 1.5em;
+  margin-right: 20px;
+
+}
 
 .facet {
     background-color: transparent;
